--- a/src/main/resources/com/andre/dojo/invoicemanager/layouts-design-view.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/layouts-design-view.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="720.0" prefWidth="1082.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andre.dojo.invoicemanager.LayoutsDesignController">
    <children>
       <Label layoutX="39.0" layoutY="14.0" text="jasper report" />
@@ -36,7 +35,10 @@
           </Tab>
           <Tab text="Data Source">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="169.0" prefWidth="372.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="169.0" prefWidth="372.0">
+                     <children>
+                        <TextArea fx:id="textAreaDataSource" layoutX="14.0" layoutY="30.0" prefHeight="575.0" prefWidth="859.0" />
+                     </children></AnchorPane>
             </content>
           </Tab>
             <Tab text="Preview">
