--- a/src/main/resources/com/andre/dojo/invoicemanager/popUp-add-org-view.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/popUp-add-org-view.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane minHeight="554.0" minWidth="675.0" prefHeight="554.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andre.dojo.invoicemanager.PopUpInsertOrgController">
    <children>
       <TextField fx:id="orgName" layoutX="27.0" layoutY="49.0" prefHeight="24.0" prefWidth="287.0" AnchorPane.leftAnchor="27.0" />
@@ -44,8 +43,9 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Text layoutX="363.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You can also choose the right Person Management from this table if you has made before." wrappingWidth="263.0" AnchorPane.bottomAnchor="499.734375" AnchorPane.leftAnchor="363.0" AnchorPane.rightAnchor="49.0" AnchorPane.topAnchor="24.0" />
-      <Button fx:id="btnAddOrgInput" layoutX="462.0" layoutY="422.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="188.0" text="Add Organization Data" AnchorPane.bottomAnchor="108.0" AnchorPane.rightAnchor="25.0" />
-      <Button fx:id="cancelInput" layoutX="576.0" layoutY="501.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="74.0" text="Cancel" />
+      <Text layoutX="363.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You can also choose the right Person Management from this table if you had made before." wrappingWidth="263.0" AnchorPane.bottomAnchor="499.734375" AnchorPane.leftAnchor="363.0" AnchorPane.rightAnchor="49.0" AnchorPane.topAnchor="24.0" />
+      <Button fx:id="btnAddOrgInput" layoutX="462.0" layoutY="465.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="188.0" text="Add Organization Data" AnchorPane.bottomAnchor="64.0" AnchorPane.rightAnchor="25.0" />
+      <Button fx:id="cancelInput" layoutX="576.0" layoutY="501.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="74.0" text="Close" />
+      <Button fx:id="cancelSelect" layoutX="363.0" layoutY="421.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Cancel Select" />
    </children>
 </AnchorPane>
