--- a/src/main/resources/com/andre/dojo/invoicemanager/Dashboard-view.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/Dashboard-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
@@ -11,6 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andre.dojo.invoicemanager.DashboardController">
    <children>
@@ -58,21 +60,24 @@
                      <children>
                         <ScrollPane prefHeight="589.0" prefWidth="874.0">
                            <content>
-                              <VBox fx:id="vboxOrganization" prefHeight="590.0" prefWidth="839.0">
+                              <VBox fx:id="vboxOrganization" prefWidth="839.0" spacing="1.0">
                                  <children>
                                     <Pane prefHeight="169.0" prefWidth="839.0">
                                        <children>
                                           <ImageView fitHeight="133.0" fitWidth="140.0" layoutX="24.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true" />
-                                          <Label layoutX="179.0" layoutY="25.0" text="Organization Name">
+                                          <Label layoutX="179.0" layoutY="20.0" prefHeight="40.0" prefWidth="295.0" text="Organization Name">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
                                           </Label>
-                                          <Label alignment="TOP_LEFT" layoutX="179.0" layoutY="67.0" prefHeight="61.0" prefWidth="377.0" text="Organization Description." />
                                           <Label layoutX="179.0" layoutY="147.0" prefHeight="16.0" prefWidth="351.0" text="Address." />
                                           <Separator layoutX="179.0" layoutY="137.0" prefHeight="3.0" prefWidth="211.0" />
                                           <Label alignment="TOP_LEFT" layoutX="567.0" layoutY="67.0" prefHeight="61.0" prefWidth="247.0" text="CEO / Direction. " />
+                                          <Text layoutX="179.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="368.0" />
                                        </children>
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
                                     </Pane>
                                  </children>
                               </VBox>
