--- a/src/main/resources/com/andre/dojo/invoicemanager/hello-view.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/hello-view.fxml
@@ -60,7 +60,7 @@
                         <Image url="@icon/folder-down.png" />
                      </image>
                   </ImageView>
-                  <Label layoutX="54.0" layoutY="9.0" prefHeight="30.0" prefWidth="147.0" text="Export / Generate">
+                  <Label layoutX="54.0" layoutY="9.0" prefHeight="30.0" prefWidth="147.0" text="Setup Invoice">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -75,6 +75,20 @@
                      </image>
                   </ImageView>
                   <Label layoutX="14.0" layoutY="36.0" prefHeight="30.0" prefWidth="212.0" text="Keep faster to safe your time.">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <Pane fx:id="tombolExport1" layoutX="21.0" layoutY="251.0" prefHeight="47.0" prefWidth="230.0" styleClass="side-button">
+               <children>
+                  <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="14.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icon/folder-down.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="54.0" layoutY="9.0" prefHeight="30.0" prefWidth="165.0" text="Export">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -113,14 +127,28 @@
                      </font>
                   </Label>
                   <Separator layoutX="14.0" layoutY="48.0" prefHeight="0.0" prefWidth="927.0" />
-                  <TableView fx:id="tableViewInvoice" layoutX="4.0" layoutY="60.0" minHeight="489.0" prefHeight="489.0" prefWidth="947.0">
+                  <TableView fx:id="tableViewInvoice" layoutX="14.0" layoutY="60.0" minHeight="474.0" prefHeight="474.0" prefWidth="937.0">
                     <columns>
                       <TableColumn fx:id="tableColumnCheckbox" prefWidth="109.0" text="Choose!" />
                         <TableColumn fx:id="tableColumnCode" prefWidth="203.0" text="Invoice Code" />
-                      <TableColumn fx:id="tableColumnDescription" prefWidth="326.0" text="Description" />
-                        <TableColumn fx:id="tableColumnCustomer" prefWidth="308.0" text="Customer" />
+                      <TableColumn fx:id="tableColumnDescription" prefWidth="334.0" text="Description" />
+                        <TableColumn fx:id="tableColumnCustomer" prefWidth="279.0" text="Customer" />
                     </columns>
                   </TableView>
+                  <Pane fx:id="tombolExport11" layoutX="804.0" layoutY="534.0" prefHeight="47.0" prefWidth="147.0" styleClass="side-button">
+                     <children>
+                        <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="14.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@icon/folder-down.png" />
+                           </image>
+                        </ImageView>
+                        <Label layoutX="54.0" layoutY="9.0" prefHeight="30.0" prefWidth="90.0" text="Export">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
                </children>
             </Pane>
          </children>
