--- a/src/main/resources/com/andre/dojo/invoicemanager/hello-view.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/hello-view.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -53,11 +52,11 @@
                   </Label>
                </children>
             </Pane>
-            <Pane fx:id="tombolExport" layoutX="22.0" layoutY="205.0" prefHeight="47.0" prefWidth="230.0" styleClass="side-button">
+            <Pane fx:id="tombolSetup" layoutX="22.0" layoutY="205.0" prefHeight="47.0" prefWidth="230.0" styleClass="side-button">
                <children>
                   <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="14.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@icon/folder-down.png" />
+                        <Image url="@icon/anvil.png" />
                      </image>
                   </ImageView>
                   <Label layoutX="54.0" layoutY="9.0" prefHeight="30.0" prefWidth="147.0" text="Setup Invoice">
@@ -81,7 +80,7 @@
                   </Label>
                </children>
             </Pane>
-            <Pane fx:id="tombolExport1" layoutX="21.0" layoutY="251.0" prefHeight="47.0" prefWidth="230.0" styleClass="side-button">
+            <Pane fx:id="tombolExport" layoutX="21.0" layoutY="251.0" prefHeight="47.0" prefWidth="230.0" styleClass="side-button">
                <children>
                   <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="14.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -97,60 +96,63 @@
             </Pane>
          </children>
       </Pane>
-      <AnchorPane layoutX="295.0" layoutY="23.0" prefHeight="64.0" prefWidth="964.0" styleClass="top-panel">
+      <AnchorPane fx:id="anchorPaneMain" layoutX="287.0" layoutY="16.0" prefHeight="691.0" prefWidth="978.0">
          <children>
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="925.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@icon/sun.png" />
-               </image>
-            </ImageView>
-            <TextField layoutX="701.0" layoutY="13.0" prefHeight="39.0" prefWidth="212.0" promptText="Search..." styleClass="field-search" />
-            <Label alignment="CENTER" layoutX="14.0" layoutY="13.0" prefHeight="39.0" prefWidth="157.0" styleClass="top-label-active" text="29 Agustus 2024">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" layoutX="184.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" text="Invoice History">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="anchorPaneMain" layoutX="295.0" layoutY="107.0" prefHeight="586.0" prefWidth="964.0">
-         <children>
-            <Pane fx:id="paneInvoice" prefHeight="586.0" prefWidth="964.0" styleClass="list-invoice">
+            <AnchorPane fx:id="paneInvoice" prefHeight="691.0" prefWidth="978.0">
                <children>
-                  <Label layoutX="14.0" layoutY="14.0" text="Invoice for this month is ready to generate.">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-                  <Separator layoutX="14.0" layoutY="48.0" prefHeight="0.0" prefWidth="927.0" />
-                  <TableView fx:id="tableViewInvoice" layoutX="14.0" layoutY="60.0" minHeight="474.0" prefHeight="474.0" prefWidth="937.0">
-                    <columns>
-                      <TableColumn fx:id="tableColumnCheckbox" prefWidth="109.0" text="Choose!" />
-                        <TableColumn fx:id="tableColumnCode" prefWidth="203.0" text="Invoice Code" />
-                      <TableColumn fx:id="tableColumnDescription" prefWidth="334.0" text="Description" />
-                        <TableColumn fx:id="tableColumnCustomer" prefWidth="279.0" text="Customer" />
-                    </columns>
-                  </TableView>
-                  <Pane fx:id="tombolExport11" layoutX="804.0" layoutY="534.0" prefHeight="47.0" prefWidth="147.0" styleClass="side-button">
+                  <AnchorPane prefHeight="64.0" prefWidth="978.0" styleClass="top-panel">
                      <children>
-                        <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="14.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="938.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@icon/folder-down.png" />
+                              <Image url="@icon/sun.png" />
                            </image>
                         </ImageView>
-                        <Label layoutX="54.0" layoutY="9.0" prefHeight="30.0" prefWidth="90.0" text="Export">
+                        <TextField layoutX="710.0" layoutY="13.0" prefHeight="39.0" prefWidth="212.0" promptText="Search..." styleClass="field-search" />
+                        <Label fx:id="tombolTanggal" alignment="CENTER" layoutX="14.0" layoutY="13.0" prefHeight="39.0" prefWidth="157.0" styleClass="top-label-active" text="29 Agustus 2024">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="tombolHistory" alignment="CENTER" layoutX="184.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" text="Invoice History">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Label>
                      </children>
+                  </AnchorPane>
+                  <Pane layoutY="77.0" prefHeight="613.0" prefWidth="978.0" styleClass="list-invoice">
+                     <children>
+                        <Label layoutX="14.0" layoutY="17.0" text="Invoice for this month is ready to generate.">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <TableView fx:id="tableViewInvoice" layoutX="14.0" layoutY="60.0" minHeight="467.0" prefHeight="489.0" prefWidth="952.0">
+                          <columns>
+                            <TableColumn fx:id="tableColumnCheckbox" prefWidth="109.0" text="Choose!" />
+                              <TableColumn fx:id="tableColumnCode" prefWidth="203.0" text="Invoice Code" />
+                            <TableColumn fx:id="tableColumnDescription" prefWidth="334.0" text="Description" />
+                              <TableColumn fx:id="tableColumnCustomer" prefWidth="279.0" text="Customer" />
+                          </columns>
+                        </TableView>
+                        <Pane fx:id="tombolGenerate" layoutX="813.0" layoutY="561.0" prefHeight="42.0" prefWidth="154.0" styleClass="tombol-primary">
+                           <children>
+                              <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="8.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@icon/image-down.png" />
+                                 </image>
+                              </ImageView>
+                              <Label layoutX="39.0" layoutY="6.0" prefHeight="28.0" prefWidth="114.0" text="Generate Now">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </Pane>
+                     </children>
                   </Pane>
                </children>
-            </Pane>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </children>
