andre hampir jadi

--- a/src/main/resources/com/andre/dojo/invoicemanager/setup-view.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/setup-view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="paneInvoice" prefHeight="691.0" prefWidth="978.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andre.dojo.invoicemanager.SetupController">
+<AnchorPane fx:id="rootPane" prefHeight="691.0" prefWidth="978.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andre.dojo.invoicemanager.SetupController">
 <children>
     <AnchorPane prefHeight="64.0" prefWidth="978.0" styleClass="top-panel">
         <children>
@@ -24,22 +24,22 @@
                     <Font size="15.0" />
                 </font>
             </Label>
-            <Label fx:id="tombolHistory" alignment="CENTER" layoutX="171.0" layoutY="14.0" prefHeight="37.0" prefWidth="92.0" text="Add Items">
+            <Label fx:id="btnItems" alignment="CENTER" layoutX="171.0" layoutY="14.0" prefHeight="37.0" prefWidth="92.0" text="Add Items">
                 <font>
                     <Font size="15.0" />
                 </font>
             </Label>
-            <Label fx:id="tombolHistory1" alignment="CENTER" layoutX="263.0" layoutY="14.0" prefHeight="37.0" prefWidth="92.0" text="Json Data">
+            <Label fx:id="btnJsonData" alignment="CENTER" layoutX="263.0" layoutY="14.0" prefHeight="37.0" prefWidth="92.0" text="Json Data">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label fx:id="tombolHistory11" alignment="CENTER" layoutX="355.0" layoutY="14.0" prefHeight="37.0" prefWidth="101.0" text="Jrxml String">
+            <Label fx:id="btnJrxml" alignment="CENTER" layoutX="355.0" layoutY="14.0" prefHeight="37.0" prefWidth="101.0" text="Jrxml String">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label fx:id="tombolHistory111" alignment="CENTER" layoutX="456.0" layoutY="14.0" prefHeight="37.0" prefWidth="127.0" text="Preview Invoice">
+            <Label fx:id="btnPreview" alignment="CENTER" layoutX="456.0" layoutY="14.0" prefHeight="37.0" prefWidth="127.0" text="Preview Invoice">
                <font>
                   <Font size="15.0" />
                </font>
@@ -52,15 +52,15 @@
                 <columns>
                     <TableColumn fx:id="tableColumnCode" prefWidth="180.0" text="Invoice Code" />
                     <TableColumn fx:id="tableColumnDescription" prefWidth="298.0" text="Description" />
-                    <TableColumn fx:id="tableColumnCustomer" prefWidth="244.0" text="Time Created" />
-                  <TableColumn fx:id="tableColumnCustomer1" prefWidth="220.0" text="Customer" />
+                    <TableColumn fx:id="tableColumnTimeCreated" prefWidth="244.0" text="Time Created" />
+                  <TableColumn fx:id="tableColumnCustomer" prefWidth="220.0" text="Customer" />
                 </columns>
             </TableView>
-            <Pane fx:id="tombolGenerate" layoutX="422.0" layoutY="560.0" prefHeight="42.0" prefWidth="127.0" styleClass="tombol-primary">
+            <Pane fx:id="btnAdd" layoutX="422.0" layoutY="560.0" prefHeight="42.0" prefWidth="127.0" styleClass="tombol-primary">
                 <children>
                     <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="8.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                            <Image url="@icon/image-down.png" />
+                            <Image url="@icon/package-plus.png" />
                         </image>
                     </ImageView>
                     <Label layoutX="39.0" layoutY="6.0" prefHeight="28.0" prefWidth="81.0" text="Add Items">
@@ -71,27 +71,32 @@
                 </children>
             </Pane>
             <TextField layoutX="329.0" layoutY="11.0" prefHeight="39.0" prefWidth="313.0" promptText="Search..." styleClass="field-search" />
-            <Label layoutX="15.0" layoutY="415.0" prefHeight="21.0" prefWidth="136.0" text="Invoice Selected">
+            <Label layoutX="15.0" layoutY="415.0" prefHeight="21.0" prefWidth="136.0" text="Selected Invoice">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="182.0" layoutY="415.0" prefHeight="21.0" prefWidth="213.0" text="Code/9809/inv/87/0908/100">
+            <Label fx:id="showCode" layoutX="182.0" layoutY="415.0" prefHeight="21.0" prefWidth="418.0" text="Code/9809/inv/87/0908/100">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="182.0" layoutY="444.0" prefHeight="21.0" prefWidth="322.0" text="Membeli ayam kalkun untuk stock resto">
+            <Label fx:id="showDescription" layoutX="182.0" layoutY="444.0" prefHeight="21.0" prefWidth="775.0" text="Membeli ayam kalkun untuk stock resto">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="182.0" layoutY="475.0" prefHeight="21.0" prefWidth="322.0" text="Ibu Susiyati, PT. Mekar Wisata Tbk.">
+            <Label fx:id="showCustomer" layoutX="182.0" layoutY="475.0" prefHeight="21.0" prefWidth="775.0" text="Ibu Susiyati, PT. Mekar Wisata Tbk.">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="182.0" layoutY="506.0" prefHeight="21.0" prefWidth="322.0" text="Created at 19.20 21 June 2025">
+            <Label fx:id="showTimeStamp" layoutX="182.0" layoutY="506.0" prefHeight="21.0" prefWidth="775.0" text="Created at 19.20 21 June 2025">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="showMessage" alignment="CENTER" layoutX="208.0" layoutY="532.0" prefHeight="21.0" prefWidth="555.0" styleClass="text-danger" text="Please select an invoice above!" textFill="RED">
                <font>
                   <Font size="15.0" />
                </font>
